@@ -15,3 +15,4 @@
 * remove chart selector
 * [#29](https://github.com/upfrontsystems/izinto-angular/issues/29) fix reordering of charts and dashboards
 * [#24](https://github.com/upfrontsystems/izinto-angular/issues/24) do not filter dashboards in collection by user
+* [#35](https://github.com/upfrontsystems/izinto-angular/issues/35) add decimals for rounding chart labels
